--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-/* Fill CSS here */
+
 body{
     width: 100%;
 }
@@ -27,14 +27,14 @@ form>label{
 }
 form>input{
     margin-left: 2em;
-    /* margin-bottom: .5em; */
+     margin-bottom: .5em; 
     width: 80%;
     margin-top: -10px;
     padding: 0px;
 }
 form>select{
     margin-left: 2em;
-    /* margin-bottom: .5em; */
+     margin-bottom: .5em; 
     width: 80%;
     margin-top: -10px;
 }
@@ -43,7 +43,6 @@ table{
 }
 #submit{
     width: 80%;
-    
     margin-top: 1em;
     border: 0px;
     background-color: #2b619e;
@@ -79,4 +78,4 @@ background-color: #2b619e;
 color: white;
 border: 1px  white;
 }
-
+ 
